--- a/sullivanBackend/src/main/resources/application.properties
+++ b/sullivanBackend/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 server.port = 8088
+server.ssl.enabled=true
+server.ssl.key-alias=earkeystore
+server.ssl.key-store=earkeystore.pkcs12
+server.ssl.key-store-password=ear1234!
+server.ssl.key-password=ear1234!
+server.ssl.trust-store=eartrust.pkcs12
+server.ssl.trust-store-password=ear1234!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://15.165.16.157:3306/stew?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.url=jdbc:mysql://3.35.204.9:3306/ear_project?jdbcCompliantTruncation=false
 spring.datasource.username=ear_project_success
 spring.datasource.password=Ear_success1!
